--- a/evidence/templates/insured.html
+++ b/evidence/templates/insured.html
@@ -28,7 +28,9 @@
             <tr>
                 <th>Name</th>
                 <th>City</th>
-                <th></th>
+                {% if has_permission or user.is_superuser %}
+                    <th>Actions</th>
+                {% endif %}
             </tr>
         </thead>
         <tbody>
@@ -36,10 +38,14 @@
                 <tr>
                     <td><a href="{% url 'insured_detail' insured.id %}">{{ insured.first_name }} {{ insured.last_name }}</a></td>
                     <td>{{ insured.street }}, {{ insured.city }}</td>
+                    {% if has_permission or user.is_superuser %}
                     <td>
-                        <a href="{% url 'delete_insured' insured.id %}" class="button button-delete" onclick="return confirm('Are you sure you want to delete this insured?')">Delete</a>
-                        <a href="{% url 'edit_insured' insured.id %}" class="button button-edit">Edit</a>
+
+                            <a href="{% url 'delete_insured' insured.id %}" class="button button-delete"
+                               onclick="return confirm('Are you sure you want to delete this insured?')">Delete</a>
+                            <a href="{% url 'edit_insured' insured.id %}" class="button button-edit">Edit</a>
                     </td>
+                    {% endif %}
                 </tr>
             {% endfor %}
         </tbody>
