--- a/evidence/templates/insured_detail.html
+++ b/evidence/templates/insured_detail.html
@@ -32,7 +32,9 @@
                 <tr>
                     <th>Insurance</th>
                     <th>Amount</th>
-                    <th></th>
+                    {% if has_permission or user.is_superuser %}
+                    <th>Actions</th>
+                    {% endif %}
                 </tr>
             </thead>
             <tbody>
@@ -40,10 +42,13 @@
                 <tr>
                     <td><a href="{% url 'insurance_detail' insurance_id=policy.id %}">{{ policy.get_type_display }}</a></td>
                     <td>{{ policy.amount }} Kč</td>
-                  <td>
-                        <a href="{% url 'delete_insurance' insurance_id=policy.id %}" class="button button-delete" onclick="return confirm('Are you sure you want to delete this insurance?')">Delete</a>
+                    {% if has_permission or user.is_superuser %}
+                    <td>
+                        <a href="{% url 'delete_insurance' insurance_id=policy.id %}" class="button button-delete"
+                           onclick="return confirm('Are you sure you want to delete this insurance?')">Delete</a>
                         <a href="{% url 'edit_insurance' insurance_id=policy.id %}" class="button button-edit">Edit</a>
                     </td>
+                    {% endif %}
                 </tr>
             {% endfor %}
             </tbody>
@@ -51,7 +56,10 @@
     </div>
     <div class="main-buttons">
         <a href="{% url 'add_insurance' insured_id=insured.id %}" class="button button-add">Add Insurance</a>
-        <a href="{% url 'edit_insured' insured.id %}" class="button button-edit">Edit Insured</a>
-        <a href="{% url 'delete_insured' insured.id %}" class="button button-delete" onclick="return confirm('Are you sure you want to delete this insured?')">Delete</a>
+        {% if has_permission or user.is_superuser %}
+            <a href="{% url 'edit_insured' insured.id %}" class="button button-edit">Edit Insured</a>
+            <a href="{% url 'delete_insured' insured.id %}" class="button button-delete"
+               onclick="return confirm('Are you sure you want to delete this insured?')">Delete</a>
+        {% endif %}
     </div>
 {% endblock %}
