--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -3,11 +3,11 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-    <h2>Login</h2>
+    <h2 class="login-h">Login</h2>
     {% if error_message %}
         <p>{{ error_message }}</p>
     {% endif %}
-    <form method="post">
+    <form method="post" class="login-form">
         {% csrf_token %}
         <div>
             <label for="id_username">Username:</label>
@@ -17,6 +17,6 @@
             <label for="id_password">Password:</label>
             <input type="password" name="password" id="id_password">
         </div>
-        <button type="submit">Login</button>
+        <button type="submit" class="submit-button">Login</button>
     </form>
 {% endblock %}
