--- a/accounts/templates/sign_up.html
+++ b/accounts/templates/sign_up.html
@@ -3,11 +3,11 @@
 {% block title %}Sign up{% endblock %}
 
 {% block content %}
-  <h2>Sign up</h2>
-  <form method="POST">
+  <h2 class="sign-up-h">Sign up</h2>
+  <form method="POST" class="sign-up-form">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Sign up</button>
+    <button type="submit" class="submit-button">Sign up</button>
   </form>
 
 {% endblock %}
