--- a/evidence/templates/new_insured.html
+++ b/evidence/templates/new_insured.html
@@ -19,6 +19,10 @@
                 <label>Street</label>
                 {{ form.street }}
             </div>
+            <div class="form-row">
+                <label>Role</label>
+                {{ form.role }}
+            </div>
         </div>
         <div class="form-column">
             <div class="form-row">
