--- a/evidence/templates/edit_insured.html
+++ b/evidence/templates/edit_insured.html
@@ -12,6 +12,10 @@
                 {{ form.first_name }}
             </div>
             <div class="form-row">
+                <label>Role</label>
+                {{ form.role }}
+            </div>
+            <div class="form-row">
                 <label>Email</label>
                 {{ form.email }}
             </div>
