--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,7 +47,14 @@
 .navbar-login span {
     margin-right: 20px;
 }
+.role {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
 
+}
 
 .insured-h, .insurances-h, .insured-events-h {
     margin-top: 5%;
@@ -82,7 +89,6 @@
     display: flex;
     justify-content: center;
     margin-top: 10px;
-
 }
 
 .main-buttons a:hover {
