--- a/evidence/templates/insurance_detail.html
+++ b/evidence/templates/insurance_detail.html
@@ -8,6 +8,7 @@
         <div class="insurance-info">
             <p><strong>Type:</strong> {{ insurance.get_type_display }}</p>
             <p><strong>Insured Name:</strong> {{ insurance.insured_names }}</p>
+            <p><strong>Covered Parties:</strong></p>
             <p><strong>Subject:</strong> {{ insurance.subject }}</p>
             <p><strong>Amount:</strong> {{ insurance.amount }} Kč</p>
             <p><strong>Valid Until:</strong> {{ insurance.valid_until }}</p>
