--- a/static/css/style.css
+++ b/static/css/style.css
@@ -432,8 +432,59 @@
   background-color: #f4f4f4;
 }
 
+.insured-badge {
+    color: red;
+}
 
+.policyholder-badge {
+    color: blue;
+}
 
+.filter-container {
+    width: 85%;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
 
+.filter-form {
+    display: flex;
+    align-items: center;
+}
 
+.filter-form select,
+.filter-form input[type="text"] {
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-left: 8px;
+}
+
+.filter-form button {
+    padding: 8px 16px;
+    font-size: 14px;
+    background-color: #6495ED;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 8px;
+}
+
+.filter-form a {
+    padding: 8px 16px;
+    font-size: 14px;
+    background-color: #f44336;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    margin-left: 8px;
+}
+
+.filter-form a:hover,
+.filter-form button:hover {
+    opacity: 0.8;
+}
 
