--- a/evidence/templates/insurance_events.html
+++ b/evidence/templates/insurance_events.html
@@ -62,7 +62,8 @@
           <td>{{ event.status }}</td>
           {% if has_permission or user.is_superuser %}
           <td>
-            <a href="{% url 'delete_event' event_id=event.id %}" class="button button-delete" onclick="return confirm('Are you sure you want to delete this event?')">Delete</a>
+            <a href="{% url 'delete_event' event_id=event.id %}" class="button button-delete"
+               onclick="return confirm('Are you sure you want to delete this event?')">Delete</a>
             <a href="{% url 'edit_event' event_id=event.id %}" class="button button-edit">Edit</a>
           </td>
           {% endif %}
