Add Report to models.py and reworked date field. Create report view.

--- a/evidence/templates/insurance_event_detail.html
+++ b/evidence/templates/insurance_event_detail.html
@@ -13,7 +13,7 @@
             {% endfor %}</p>
           <p><strong>Subject:</strong> {{ event.subject }}</p>
           <p><strong>Description:</strong> {{ event.description }}</p>
-          <p><strong>Date:</strong> {{ event.date }}</p>
+          <p><strong>Date:</strong> {{ event.date_submitted }}</p>
           <p><strong>Status:</strong> {{ event.get_status_display }}</p>
           <p><strong>Note:</strong> {{ event.note }}</p>
       </div>
