--- a/evidence/templates/base.html
+++ b/evidence/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <title>{% block title %}{% endblock %}</title>
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div class="navbar">
@@ -15,6 +16,7 @@
             <a href="/insured/" {% if request.path == '/insured/' %}class="active"{% endif %}>Insured</a>
             <a href="/insurances/" {% if request.path == '/insurances/' %}class="active"{% endif %}>Insurance</a>
             <a href="/insurance_events/" {% if request.path == '/insurance_events/' %}class="active"{% endif %}>Events</a>
+            <a href="/reports/" {% if request.path == '/reports/' %}class="active"{% endif %}>Reports</a>
             <a href="/about/" {% if request.path == '/about/' %}class="active"{% endif %}>About</a>
         </div>
 
