--- a/evidence/templates/insurance_events.html
+++ b/evidence/templates/insurance_events.html
@@ -24,6 +24,7 @@
   <table class="insured-events-table">
     <thead>
       <tr>
+        <th></th>
         <th>Event id</th>
         <th>Insurance</th>
         <th>Insured</th>
@@ -38,6 +39,9 @@
     <tbody>
       {% for event in page_obj %}
         <tr>
+          <td>
+          <input type="checkbox" name="eventCheckbox" value="{{ event.id }}">
+          </td>
           <td>
             <a href="{% url 'insurance_event_detail' event_id=event.id %}" class="event-id">
               #{{ event.id }}
@@ -58,7 +62,7 @@
             {% endfor %}
           </td>
           <td>{{ event.subject }}</td>
-          <td>{{ event.date }}</td>
+          <td>{{ event.date_submitted }}</td>
           <td>{{ event.status }}</td>
           {% if has_permission or user.is_superuser %}
           <td>
@@ -73,7 +77,10 @@
   </table>
 
   <div class="main-buttons">
-    <a href="{% url 'create_event' %}" class="button button-add">Create Event</a>
+  <a href="{% url 'create_event' %}" class="button button-add">Create Event</a>
+  {% if has_permission or user.is_superuser %}
+  <a href="#" class="button button-add">Complete Event</a>
+  {% endif %}
   </div>
 
   <div class="pagination">
