--- a/evidence/templates/complete_event.html
+++ b/evidence/templates/complete_event.html
@@ -3,13 +3,14 @@
 {% block title %}Complete Event{% endblock %}
 
 {% block content %}
-<h2 class="create-event-h">Complete Event</h2>
+  <h2 class="create-event-h">Complete Event</h2>
 
-  <form method="post" class="my-form">
+  <form method="post" class="my-form" action="{% url 'complete_event' %}">
     {% csrf_token %}
     {{ form.as_p }}
     <div class="submit-button-create-event">
       <button type="submit" class="submit-button">Complete</button>
     </div>
   </form>
+
 {% endblock %}
